
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct tl_list_entry_set_text {int len; int text; int object_id; int list_id; } ;
struct tl_act_extra {scalar_t__ extra; } ;


 int TL_BOOL_FALSE ;
 int TL_BOOL_TRUE ;
 int do_change_entry_text (int ,int ,int ,int ) ;
 int tl_store_int (int ) ;

int tl_do_list_entry_set_text (struct tl_act_extra *extra) {
  struct tl_list_entry_set_text *e = (void *)extra->extra;
  int res = do_change_entry_text (e->list_id, e->object_id, e->text, e->len);
  if (res == -2) { return -2; }
  tl_store_int (res <= 0 ? TL_BOOL_FALSE : TL_BOOL_TRUE);
  return 0;
}
